--- a/src/styles.css
+++ b/src/styles.css
@@ -142,6 +142,7 @@ button:focus-visible {
 }
 .expenses .date {
   color: #C2C2C2 !important;
+  font-size: 12px;
 }
 .cust-padd1 {
   padding: 2rem 4rem;
@@ -167,14 +168,18 @@ button:focus-visible {
 .bar {
   width: 1.25rem;
   margin: 0 0.125rem;
-  background-color: #AACEFF;
+  background: #AACEFF!important;
 }
-
+.barfilled {
+  width: 1.25rem;
+  margin: 0 0.125rem;
+  background: #2a79e4!important;
+}
 .subhead {
   font-size: 1.25rem;
 }
 .item {
-  margin: 1.100rem 0;
+  margin: 1.160rem 0;
 }
 .item-time {
   font-size: 0.75rem;
@@ -191,14 +196,13 @@ button:focus-visible {
   font-weight: 600;
 }
 .sideheading {
-  font-weight: bold;
+  font-weight: 600;
   font-size: 1.25rem;
   color: rgb(38, 42, 65);
 }
-
 .savemoney {
   background: rgb(237 240 246);
-  padding: 0.75rem 1.25rem;
+  padding: 1.75rem 1.25rem;
   border-radius: 1rem;
   margin: 100px 0 0 0;
 }
@@ -206,6 +210,10 @@ button:focus-visible {
   font-size: 1rem;
   color: rgb(39 50 64);
   font-weight: 600;
+}
+.save-text{
+  font-size: 12px;
+  color: rgb(64, 72, 82);
 }
 .progressitem {
   padding: 0.75rem 0;
@@ -222,6 +230,7 @@ button:focus-visible {
   background: rgb(16 16 16);
   border: none;
   padding: 0.75rem 0.75rem;
+  font-weight: 500;
 }
 .bg-success {
   --bs-bg-opacity: 1;
@@ -317,12 +326,12 @@ button:focus-visible {
   }
 
   .sidebar {
-    display: none;
+    text-align: center;
   }
 }
 
 @media (min-width: 769px) {
   .navbar-toggler {
-    display: none;
+    text-align: center;
   }
 }
